testsuite/tests/properties/invalid_then/lambda_no_arg.lkt
import common

class Example: FooNode {
    @parse_field name: Name

    fun prop(): Name = node.name.do(() => node)
}
